2008-02-03  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- Set the renderer combo insensitive when state is PLAYING or PAUSED
	  and viceversa.
	- A small cosmetic change.

2008-02-03  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade:
	* src/av-cp/playlist-treeview.c

	- Play selected item on playlist row activation.
	- Use glade for connecting all treeview signals.

2008-02-03  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:

	- get_selected_item() returns a boolean indicating success.
	- Set the renderer's state to STOPPED if a non-item is selected while
	  the renderer's state is set to PLAYING/PAUSED.
	- Mark MediaServer as container.
	- Do not allow selection of containers.

	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Make av_transport_send_action() public.

2008-02-01  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	- Listen to and act on Container updates.
	- Refactor: Put the code to unpopulate a container node, into a
	  separate function.
	- Remove a FIXME comment that is not valid anymore.

2008-01-30  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	- Only free the metadata if we actually get it.
	- Unify come coding style.

2008-01-29  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	- Containers should only be browsed if they are visible. This should
	  eliminate the problem of initial browsing taking down the whole
	  system.

	- Ref the service proxy before _begin_action() and unref it in callback.

2008-01-29  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:

	Add functions to get currently selected Renderer's RenderingControl and
	volume.

	* src/av-cp/renderer-controls.c:

	Implement volume control.

2008-01-29  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade: